public/users/admin/1001/ce.txt
Main.cpp: In function ‘int main()’:
Main.cpp:4:11: error: ‘asdasdsadasdasd’ was not declared in this scope
 int a , b;asdasdsadasdasd
           ^
